fix(scss): added touch action none to prevent elastic bounce (overflow-scrolling) effect.

--- a/src/styles/scss/layout/_layout.scss
+++ b/src/styles/scss/layout/_layout.scss
@@ -8,6 +8,7 @@ body {
   color: $whiteDark;
   letter-spacing: 0.025em;
   overflow-x: hidden;
+  touch-action: none;
   @include mixins.primaryLinearGradient();
 }
 
